--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -90,6 +90,9 @@
                                 <state key="normal" title="Gallary">
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="4fh-fL-1u0" kind="show" id="dYb-5B-UNm"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="foi-AN-FFS">
                                 <rect key="frame" x="16" y="313" width="343" height="41"/>
@@ -125,6 +128,46 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dnv-kz-Xdk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2229.5999999999999" y="-481.70914542728639"/>
+        </scene>
+        <!--Gallary-->
+        <scene sceneID="XBM-pr-Z1T">
+            <objects>
+                <viewController id="4fh-fL-1u0" customClass="GallaryViewController" customModule="RiverLaunch" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0bu-BC-Uzz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Nighthawk" translatesAutoresizingMaskIntoConstraints="NO" id="HYj-TH-uZ3">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H55-Vt-kXR">
+                                <rect key="frame" x="16" y="126" width="343" height="414"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="HYj-TH-uZ3" firstAttribute="top" secondItem="0bu-BC-Uzz" secondAttribute="top" id="BAm-dW-vAc"/>
+                            <constraint firstItem="HYj-TH-uZ3" firstAttribute="trailing" secondItem="epI-HH-zdS" secondAttribute="trailing" id="GOA-rC-mpd"/>
+                            <constraint firstItem="HYj-TH-uZ3" firstAttribute="leading" secondItem="epI-HH-zdS" secondAttribute="leading" id="KPc-7o-lYN"/>
+                            <constraint firstItem="HYj-TH-uZ3" firstAttribute="bottom" secondItem="epI-HH-zdS" secondAttribute="bottom" id="eww-vB-D1v"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="epI-HH-zdS"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Gallary" id="Sns-OD-mf5">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="zt8-Q8-ocz">
+                            <connections>
+                                <action selector="addPictureButton:" destination="4fh-fL-1u0" id="KaK-uH-yXZ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="gallaryImageView" destination="H55-Vt-kXR" id="h0u-rg-kbr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UPs-2U-79g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3005.5999999999999" y="-482.60869565217394"/>
         </scene>
         <!--Enter Launch Data View Controller-->
         <scene sceneID="FSU-eW-Vfg">
@@ -195,7 +238,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vFn-rA-fvr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3016.8000000000002" y="-478.11094452773619"/>
+            <point key="canvasLocation" x="3006" y="267"/>
         </scene>
         <!--Home-->
         <scene sceneID="tne-QT-ifu">
@@ -280,7 +323,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zsr-4K-k1w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3006" y="-1177"/>
+            <point key="canvasLocation" x="3006" y="-1249"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="hIZ-8n-IdE">
